Revision history for OpenTelemetry

{{$NEXT}}

    * Fixed some minor formatting errors in
      OpenTelemetry::Guides::Instrumentation.

0.029     2025-04-05 18:00:22+01:00 Europe/London

    * Fix an issue introduced in 0.028 that would cause Perl 5.30
      to interpret some function calls as indirect method calls and
      die.

0.028     2025-04-05 13:42:43+01:00 Europe/London

    * Removed arguments from OpenTelemetry::Context constructors, since
      these could bypass the key validation.
    * The 'set' method for OpenTelemetry::Context now accepts multiple
      pairs, and for consistency the 'delete' method accepts multiple keys.

0.027     2024-12-20 17:31:04+00:00 Europe/London

    * Fixed some minor nits in the documentation
    * Add 'isa' as a dependency and reduce the minimum supported Perl
      version to 5.30. If you are running 5.30 please consider installing
      Type::Tiny::XS which should improve the performance of these 'isa'
      checks.

0.026     2024-12-16 09:02:42+00:00 Europe/London

    * Added some practical documentation in the OpenTelemetry::Guides
      namespace, based on the language documentation by the OpenTelemtry
      authors. Examples used in those documents has also been added to
      the examples directory in this distribution. In the future, this
      namespace will expand to include more guides.
    * Renamed OpenTelemetry::Integration namespace to
      OpenTelemetry::Instrumentation to be consistent with the names in
      the specification. The legacy namespace will continue to be
      supported for now, but new implementations should not use it.

0.025     2024-10-20 13:50:19+01:00 Europe/London

    * Fixed an issue in the integrations for HTTP::Tiny and
      LWP::UserAgent which meant that if the spans created
      internally were root spans, their data would not propagate
      correctly

0.024     2024-10-11 18:36:41+01:00 Europe/London

    * Expand test coverage and documentation for logging code
