@@ -1,5 +1,6 @@
 requires 'isa'; # To support perls older than 5.32
 requires 'Bytes::Random::Secure';
+requires 'Carp::Clan';
 requires 'Class::Method::Modifiers';
 requires 'Exporter::Tiny', '0.044'; # For -as => CODE support
 requires 'Feature::Compat::Defer';
