@@ -5,12 +5,8 @@ package OpenTelemetry::Trace::Tracer;
 
 our $VERSION = '0.030';
 
-use Log::Any;
-my $logger = Log::Any->get_logger( category => 'OpenTelemetry' );
-
 class OpenTelemetry::Trace::Tracer {
     use Feature::Compat::Try;
-    use Feature::Compat::Defer;
     use Syntax::Keyword::Dynamically;
     use Ref::Util 'is_coderef';
 
